# bolt

./: .Doxyfile  .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  DEVELOPER.md  INSTALL.md  LICENSE.md  README.md  SECURITY.md  SUMMARY.md  THIRD PARTY OPEN SOURCE SOFTWARE NOTICE.md  bolt.cmake  book.json  index.html  install.sh  quick_benchmark.sh  search_index.json
blas-enhance/: CMakeLists.txt  README.md
blas-enhance/cmakes/: FindBlasEnhance.cmake
blas-enhance/include/: blas-enhance.h
blas-enhance/src/: CMakeLists.txt  mmm.cpp  mvm.cpp
blas-enhance/tests/: CMakeLists.txt  test_mmm.cpp  test_mmm_int8.cpp  test_mvm.cpp  test_mvm_int8.cpp
common/gcl/: CMakeLists.txt
common/model_spec/: CMakeLists.txt
compute/: CMakeLists.txt
compute/blas_enhance/: CMakeLists.txt
compute/image/: CMakeLists.txt
compute/tensor/: CMakeLists.txt
engine/: .gitignore  CMakeLists.txt
engine/include/: activation.hpp  attention.hpp  clip.hpp  cnn.hpp  concat.hpp  convolution.hpp  data_loader.hpp  eltwise.hpp  embedding.hpp  factory.hpp  fully_connected_eltwise.hpp  inference.hpp  layer_norm.hpp  lstm.hpp  matmul.hpp  model.hpp  multiply.hpp  operator.hpp  pooling.hpp  reshape.hpp  result_format.hpp  scale.hpp  sequential.hpp  slice.hpp  softmax.hpp  squeeze.hpp  tensor.hpp  transpose.hpp  utils.hpp  weight_operator.hpp
engine/src/: CMakeLists.txt  cnn.cpp  data_loader.cpp  result_format.cpp  sequential.cpp  utils.cpp
engine/tests/: CMakeLists.txt  bert.cpp  classification.cpp  lenet.cpp  lstm_example.cpp  tinybert.cpp
image/: CMakeLists.txt  README.md
image/cmakes/: FindCImg.cmake  FindImage.cmake  FindX11.cmake  FindXau.cmake  Findjpeg.cmake  Findpng.cmake  Findxcb.cmake  Findz.cmake
image/dependency/: build_dependency.sh
image/include/: image.h  image_processing.hpp
image/src/: CMakeLists.txt  cvt_color.cpp  image_processing.cpp  resize.cpp
image/tests/: CMakeLists.txt  test_image_processing.cpp
inference/: CMakeLists.txt
inference/engine/: CMakeLists.txt
inference/examples/: CMakeLists.txt
inference/flow/: CMakeLists.txt
inference/include/: BoltModel.h  activation.hpp  argmax.hpp  attention.hpp  attention_mask.hpp  axis_mean.hpp  bilateral_slice_apply.hpp  check.hpp  clip.hpp  cnn.hpp  concat.hpp  constant.hpp  convolution.hpp  copy.hpp  data_loader.hpp  deconvolution.hpp  depth2space.hpp  detection_output.hpp  eltwise.hpp  embedding.hpp  factory.hpp  fully_connected.hpp  fully_connected_eltwise.hpp  inference.hpp  jump.hpp  layer_norm.hpp  lstm.hpp  lstmcell.hpp  matmul.hpp  memory.hpp  model.hpp  multiply.hpp  operator.hpp  padding.hpp  point_cast.hpp  pooling.hpp  preallocated_memory.hpp  prior_box.hpp  reduction.hpp  relative_position_embedding.hpp  (+18 more)
inference/src/: BoltModel_Jni.cpp  CMakeLists.txt  bolt.cpp  data_loader.cpp  result_format.cpp  utils.cpp
kits/: CMakeLists.txt
kits/automatic_speech_recognition/: asr_convolution_transformer.cpp  asr_rnnt.cpp  vad.cpp
kits/bert/: bert.cpp  tinybert.cpp
kits/high_dynamic_range/: hdr.cpp
kits/image_classification/: classification.cpp  classification_bin.cpp
kits/machine_translation/: nmt.cpp  nmt_tsc.cpp
kits/super_resolution/: super_resolution.cpp
kits/text_to_speech/: tts.cpp
model-tools/: .gitignore  CMakeLists.txt  README.md
model-tools/cmakes/: FindModelTools.cmake  FindModelToolsCaffe.cmake  FindModelToolsOnnx.cmake  FindProtobuf.cmake
model-tools/dependency/: build_dependency.sh
model-tools/include/: converter.h  model_optimizer.hpp  model_print.h  model_serialize_deserialize.hpp  model_tools.h
model-tools/src/: CMakeLists.txt  data_type_converter.cpp  model_adaptee.h  model_deserialize.cpp  model_print.cpp  model_serialize.cpp  model_serialize_deserialize.cpp  model_tools.cpp
model-tools/tests/: CMakeLists.txt  caffe2bolt.cpp  onnx2bolt.cpp  test_model_info_check.cpp
model_tools/src/: CMakeLists.txt  data_type_converter.cpp  model_adaptee.h  model_data_type_converter.cpp  model_quantization.cpp  model_tools.cpp  online_conversion.cpp
model_tools/tools/: CMakeLists.txt
tensor_computing/: .gitignore  CMakeLists.txt  README.md
tensor_computing/cmakes/: FindTensorComputing.cmake
tensor_computing/include/: tensor_computing.h  tensor_computing_library_algorithm_search.h  tensor_computing_type.h
tensor_computing/src/: CMakeLists.txt  activation.cpp  argmax.cpp  attention.cpp  attention_mask.cpp  axis_mean.cpp  bilateral_slice_apply.cpp  check.cpp  clip.cpp  concat.cpp  convolution.cpp  deconvolution.cpp  depth2space.cpp  depthwise_convolution.cpp  detectionoutput.cpp  eltwise.cpp  embedding.cpp  fully_connected.cpp  get_output.cpp  library_algorithm_search.cpp  lstm.cpp  matmul.cpp  multiply.cpp  normalization.cpp  padding.cpp  pooling.cpp  priorbox.cpp  quantize.cpp  reduction.cpp  reshape.cpp  scale.cpp  set_input.cpp  slice.cpp  softmax.cpp  space2depth.cpp  split.cpp  squeeze.cpp  transpose.cpp
tensor_computing/tests/: CMakeLists.txt  test_activation.cpp  test_attention.cpp  (+21 more)
tests/: CMakeLists.txt  bert.cpp  caffe2bolt.cpp  classification.cpp  classification_bin.cpp  hdr_ocl.cpp  lenet.cpp  nmt.cpp  onnx2bolt.cpp  tensor_computing_library_search.cpp  test_activation.cpp  test_api_c.c  test_api_java.java  test_argmax.cpp  test_attention.cpp  test_axis_mean.cpp  test_check.cpp  test_clip.cpp  test_concat.cpp  test_concat_int8.cpp  test_convolution.cpp  test_convolution_bnn.cpp  test_convolution_int8.cpp  test_convolution_ocl.cpp  test_deconvolution.cpp  test_depthwise_convolution.cpp  test_depthwise_convolution_int8.cpp  test_depthwise_convolution_ocl.cpp  test_detectionoutput.cpp  test_dilated_convolution.cpp  test_eltwise.cpp  test_fully_connected.cpp  test_fully_connected_ocl.cpp  test_image_processing.cpp  test_image_resize.cpp  test_lstm.cpp  test_mmm.cpp  test_mmm_int8.cpp  test_multiply.cpp  test_mvm.cpp  (+15 more)
tools/: CMakeLists.txt  caffe2bolt.cpp  onnx2bolt.cpp  ptq_calibration.cpp  tensor_computing_library_search.cpp  tflite2bolt.cpp
training/: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  TUTORIAL.md  Training.md
(+4873 files in other folders)
